优化FieldUtil.setNumber()方法，减少对象创建